--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
             <h2>Popular Movies</h2>
             <div class="card-container">
                 <div class="card">
-                    <img src="movie1.JPG" alt="Movie1">
+                    <img src="./movie1.jpg" alt="Movie1">
                     <h3>Yodha</h3>
                 </div>
                 <div class="card">
-                    <img src="movie2.JPG" alt="Movie 2">
+                    <img src="./movie2.jpg" alt="Movie 2">
                     <h3>Animal</h3>
                 </div>
                 <div class="card">
-                    <img src="movie3.JPG" alt="Movie 3">
+                    <img src="./movie3.jpg" alt="Movie 3">
                     <h3>Fighter</h3>
                 </div>
             </div>
@@ -49,15 +49,15 @@
             <h2>Trending Series</h2>
             <div class="card-container">
                 <div class="card">
-                    <img src="series1.JPG" alt="Series 1">
+                    <img src="./series1.jpg" alt="Series 1">
                     <h3>Never Have I Ever</h3>
                 </div>
                 <div class="card">
-                    <img src="series2.JPG" alt="Series 2">
+                    <img src="./series2.jpg" alt="Series 2">
                     <h3>Money Heist</h3>
                 </div>
                 <div class="card">
-                    <img src="series3.JPG" alt="Series 3">
+                    <img src="./series3.jpg" alt="Series 3">
                     <h3>Stranger Things</h3>
                 </div>
             </div>
